Implement bitwise functions

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 project(datatypesLib)
 
-set(SOURCES datatypes.cpp)
+set(SOURCES src/datatypes.cpp)
 
 add_library(datatypes STATIC ${SOURCES})
-target_include_directories(datatypes include)
+target_include_directories(datatypes PUBLIC include)
